# music_recommendation_system_based_on_emotion

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  setup.py
deployment/: Dockerfile  app.py  render.yaml
deployment/static/css/: style.css
deployment/templates/: index.html
music_env_310/Scripts/: activate  activate.bat
notebook/: 01.Data_exploration_and_cleaning.ipynb  02.Model_training.ipynb  data_cleaning_notebook.py  model_train_notebook.py
src/: exception.py  logger.py  main.py  utils.py
src/components/: data_ingestion.py  preprocessing.py
src/pipelines/: mood_extraction.py  recommendation.py  similarity_engine.py
